--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,13 @@ h1 {
   font-size: 8rem;
   color: #4ECCA3;
 }
-
+h3{
+  margin: 30px;
+  font-family: 'Lobster', cursive;
+  text-shadow: 5px 0 #232931;
+  font-size: 3rem;
+  color: #4c9be6
+}
 p {
   font-size: 2rem;
   color: #4ECCA3;
