added refresh text third commit

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h3{
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
   font-size: 3rem;
-  color: #4c9be6
+  color: #4c9be6;
 }
 p {
   font-size: 2rem;
